[project]
name = "agentic-rag"
version = "0.1.0"
description = "Agentic RAG system with Qdrant and Pydantic AI, exposed via MCP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic-ai>=0.0.20",
    "qdrant-client>=1.12.0",
    "openai>=1.50.0",
    "anthropic>=0.39.0",
    "fastmcp>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "prefect>=3.0.0",
]

[project.scripts]
agentic-rag = "agentic_rag.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_rag"]
